--- a/transport.css
+++ b/transport.css
@@ -7,6 +7,13 @@
 
 
 }
+
+webbkit-scrollbar {
+    width: 1px;
+
+}
+
+
 * {
     margin: 0;
     padding: 0;
@@ -20,13 +27,15 @@ body {
     line-height: 1.6;
 }
 
+/* Header stil */
 header {
     background-color: var(--firstcolor);
     color: white;
-    padding: 20px;
+    padding: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+
 
     background-image: url(https://helpx.adobe.com/content/dam/help/en/photoshop/using/convert-color-image-black-white/jcr_content/main-pars/before_and_after/image-before/Landscape-Color.jpg);
     background-size: cover; /* Gör att bilden täcker hela headern */
@@ -58,6 +67,41 @@ header nav ul li a {
 header nav ul li a:hover {
     text-decoration: underline;
 }
+
+/* Menyknappens stil */
+.menu-toggle {
+    display: none; /* Döljer menyknappen som standard */
+}
+
+/* Skapa en menyikon för att öppna menyn */
+.menu-icon {
+    cursor: pointer;
+    display: none; /* Döljer menyikonen i desktopvyn */
+    flex-direction: column;
+}
+
+.menu-icon .bar {
+    height: 3px;
+    width: 25px;
+    background-color: white;
+    margin: 3px 0;
+}
+
+
+    .menu-toggle {
+        display: none;
+    }
+    
+    
+    /* När checkboxen är ikryssad, visa menyn */
+    .menu-toggle:checked + label + nav ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: var(--firstcolor);
+        width: 100%;
+    }
+
 
 /* Main stil */
 main {
